force-app/main/default/objects/cgcloud__Historic_Product__c/cgcloud__Historic_Product__c.object-meta.xml
<CustomObject>
    <description>Junction object between &apos;Customer (Account)&apos; and &apos;Product (Product__c)&apos; objects</description>
    <label>Historic Product</label>
    <nameField>
        <displayFormat>HP-{0000}</displayFormat>
        <label>Historic Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historic Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>