force-app/main/default/objects/cgcloud__Historic_Product__c/fields/cgcloud__Visit_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Visit_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to visit template specific surveyed product (optional).</description>
    <label>Visit Template</label>
    <referenceTo>cgcloud__Visit_Template__c</referenceTo>
    <relationshipLabel>Historic Products</relationshipLabel>
    <relationshipName>Historic_Products</relationshipName>
    <type>Lookup</type>
</CustomField>