force-app/main/default/objects/cgcloud__Historic_Product__c/validationRules/cgcloud__Sales_Org_should_be_same_for_all_lookups.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_should_be_same_for_all_lookups</fullName>
    <active>true</active>
    <errorConditionFormula>cgcloud__Account__r.cgcloud__Sales_Org__c &lt;&gt; cgcloud__Product__r.cgcloud__Sales_Org__c || AND(NOT(ISBLANK( cgcloud__Visit_Template__c )),  TEXT(cgcloud__Visit_Template__r.cgcloud__Sales_Org__c )&lt;&gt; cgcloud__Product__r.cgcloud__Sales_Org__c)</errorConditionFormula>
    <errorMessage>The Product, the Customer and the Visit Template must have the same Sales Org.</errorMessage>
</ValidationRule>